--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+html, body {
+   height: 100%;
+   font-family: 'Roboto', sans-serif !important;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ html a, body a {
+   color: #136162;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ html .form-control, body .form-control {
+   color: rgba(5, 36, 37, 0.6);
+   font-size: 14px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ html input::placeholder, body input::placeholder {
+   color: rgba(5, 36, 37, 0.6);
 }
-
-.App-link {
-  color: #61dafb;
+ html .form-floating > .form-control:focus ~ label, body .form-floating > .form-control:focus ~ label, html .form-floating > .form-control:not(:placeholder-shown) ~ label, body .form-floating > .form-control:not(:placeholder-shown) ~ label {
+   opacity: 9;
+   transform: scale(0.85) translateY(-0.9rem) translateX(0.15rem);
+   background: #fff;
+   margin-left: 5px;
+   padding: 0 5px;
+   height: auto;
+   color: rgba(5, 36, 37, 0.6);
+   border-radius: 4px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ html .form-floating > .form-select ~ label, body .form-floating > .form-select ~ label {
+   opacity: 9;
+   transform: scale(0.85) translateY(-0.9rem) translateX(0.15rem);
+   background: #fff;
+   margin-left: 5px;
+   padding: 0 5px;
+   height: auto;
+   color: rgba(5, 36, 37, 0.6);
+   border-radius: 4px;
 }
+ html .form-control:focus, body .form-control:focus {
+   color: #212529;
+   background-color: #fff;
+   border-color: #ced4da;
+   outline: 0;
+   box-shadow: none;
+}
+ html .form-floating > .form-control:focus, body .form-floating > .form-control:focus, html .form-floating > .form-control:not(:placeholder-shown), body .form-floating > .form-control:not(:placeholder-shown) {
+   padding-top: 0.8rem;
+   padding-bottom: 0.625rem;
+}
+ html .form-floating > label, body .form-floating > label {
+   padding: 0.6rem 0.75rem;
+}
+ html .form-floating > .form-control, body .form-floating > .form-control, html .form-floating > .form-select, body .form-floating > .form-select {
+   height: 48px;
+   padding: 1rem 0.75rem;
+}
+ html .form-check .form-check-label, body .form-check .form-check-label {
+   color: #136162;
+}
+ html .btn-primary, body .btn-primary {
+   background-color: #136162;
+   border-color: #136162;
+   text-transform: uppercase;
+   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.14), 0px 3px 1px rgba(0, 0, 0, 0.12), 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+ html .btn-primary:hover, body .btn-primary:hover {
+   background: #fff;
+   color: #136162;
+   border-color: #136162;
+}
+ html .btn-light, body .btn-light {
+   color: #136162;
+   text-transform: uppercase;
+   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.14), 0px 3px 1px rgba(0, 0, 0, 0.12), 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+ html .btn-light:hover, body .btn-light:hover {
+   background: #136162;
+   color: #fff;
+   border-color: #136162;
+}
+ .device-holder .image-holder {
+   position: relative;
+}
+ .device-holder .image-holder img {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+}
+ .device-holder .image-holder .image-caption {
+   position: absolute;
+   top: 0;
+   height: 100%;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   padding: 80px 5%;
+   color: #fff;
+   background: #136163 99;
+}
+ .device-holder .image-holder .image-caption .caption-head {
+   font-size: 30px;
+   font-weight: 300;
+   line-height: 35px;
+}
+ .device-holder .image-holder .image-caption .caption-head h2 {
+   font-size: 50px;
+   font-weight: 300;
+   line-height: 60px;
+   margin-bottom: 0;
+}
+ .device-holder .image-holder .image-caption .caption-footer {
+   text-align: center;
+   max-width: 300px;
+   margin: 0 auto;
+   width: 100%;
+}
+ .device-holder .image-holder .image-caption .caption-footer .new-user {
+   color: #fff;
+   text-decoration: none;
+   margin-bottom: 15px;
+}
+ .device-holder .login-content {
+   max-width: 600px;
+   width: 100%;
+   padding: 0 30px;
+}
+ .device-holder .login-content .login-holder {
+   max-width: 330px;
+   width: 100%;
+}
+ .device-holder .login-content .login-holder h2 {
+   color: #1c4f51;
+   font-weight: normal;
+   margin-bottom: 25px;
+   text-align: center;
+   font-size: 40px;
+   font-weight: 300px;
+}
+ 
