--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/themes/tim.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href={% static 'css/main.css' %} >
+    <!-- <link rel="stylesheet" href={% static 'css/main.css' %} > -->
 
     <title>{{ customtext.title|striptags }}</title>
   </head>
