--- a/frontend/src/screens/Dashboard/dashboard.scss
+++ b/frontend/src/screens/Dashboard/dashboard.scss
@@ -167,6 +167,9 @@
     }
   }
 }
+.tans {
+  transform: translate3d(-194px, 15px, 0px) !important;
+}
 #add_admin {
   .admin-list {
     list-style: none;
@@ -364,57 +367,56 @@
   width: 1000px;
 }
 .modal {
-	&#add_Section {
-		.modal-holder {
-			max-width: 550px;
-			margin: 0 auto;
-			.modal-content {
-				 border-radius: 12px;
-				 box-shadow: 0px 12px 17px #00000024, 0px 5px 22px #0000001f, 0px 7px 8px #00000033;
-				.modal-body {
-			       max-width: 550px;
-					padding: 40px;
-					.modal-title {
-						color: rgba(5, 36, 37, 0.87);
-						font-weight: normal;
-						font-size: 34px;
-						margin-bottom: 15px;
-						text-align: center !important;
-					}
-					.modal-details {
-						max-width: 335px;
-						text-align: center;
-						color: rgba(5, 36, 37, 0.87);
-						margin-bottom: 30px;
-					}
-					.logo-uploader {
-						.logo-uploader-header {
-							color: rgba(5, 36, 37, 0.6);
-							.btn{
-								font-size: 14px;
-								color: #136162;
-								border: 1px solid rgba(5, 36, 37, 0.12);
-							}
-						}
-						.logo-uploader-area{
-							background: #F2F6F6;
-							border-radius: 8px;
-							padding: 10px;
-							min-height: 148px;
-							display: flex;
-							align-items: center;
-							justify-content: center;
-							color: rgba(5, 36, 37, 0.6);
-						}
-					}
-					.btn.btn-primary{
-						min-width: 100px;
-					}
-				}
-			}
-			
-		}
-	}
+  &#add_Section {
+    .modal-holder {
+      max-width: 550px;
+      margin: 0 auto;
+      .modal-content {
+        border-radius: 12px;
+        box-shadow: 0px 12px 17px #00000024, 0px 5px 22px #0000001f, 0px 7px 8px #00000033;
+        .modal-body {
+          max-width: 550px;
+          padding: 40px;
+          .modal-title {
+            color: rgba(5, 36, 37, 0.87);
+            font-weight: normal;
+            font-size: 34px;
+            margin-bottom: 15px;
+            text-align: center !important;
+          }
+          .modal-details {
+            max-width: 335px;
+            text-align: center;
+            color: rgba(5, 36, 37, 0.87);
+            margin-bottom: 30px;
+          }
+          .logo-uploader {
+            .logo-uploader-header {
+              color: rgba(5, 36, 37, 0.6);
+              .btn {
+                font-size: 14px;
+                color: #136162;
+                border: 1px solid rgba(5, 36, 37, 0.12);
+              }
+            }
+            .logo-uploader-area {
+              background: #f2f6f6;
+              border-radius: 8px;
+              padding: 10px;
+              min-height: 148px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              color: rgba(5, 36, 37, 0.6);
+            }
+          }
+          .btn.btn-primary {
+            min-width: 100px;
+          }
+        }
+      }
+    }
+  }
 }
 
 #info-modal {
