--- a/frontend/src/screens/Dashboard/OverviewScreens/Styles/overview.scss
+++ b/frontend/src/screens/Dashboard/OverviewScreens/Styles/overview.scss
@@ -83,7 +83,7 @@
       }
     }
     .tab-content {
-      height: calc(100vh - 22vh);
+      // height: calc(100vh - 22vh);
       .tab-pane {
         height: inherit;
         &.people-tab-holder {
